Add empty modules -core -data -network -storage -ui

--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,62 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.4.10"
+
+    ext.vers = [
+            "kotlin_version"   : "1.4.10",
+            "lifecycle_version": "2.2.0",
+            "coroutines"       : "1.3.9",
+            "koin_version"     : "2.2.0",
+            "okhttp_version"   : "4.9.0",
+            "retrofit"         : "2.9.0"
+    ]
+
+    ext.libs = [
+            'kotlin'         : "org.jetbrains.kotlin:kotlin-stdlib:$vers.kotlin_version",
+            'androidx'       : [
+                    'core'            : 'androidx.core:core-ktx:1.3.2',
+                    'appcompat'       : 'androidx.appcompat:appcompat:1.2.0',
+                    'constraintlayout': 'androidx.constraintlayout:constraintlayout:2.0.4',
+                    'viewmodel-ktx'   : "androidx.lifecycle:lifecycle-viewmodel-ktx:$vers.lifecycle_version",
+                    'livedata-ktx'    : "androidx.lifecycle:lifecycle-livedata-ktx:$vers.lifecycle_version",
+                    'core-ktx'        : "androidx.core:core-ktx:1.3.2",
+                    'fragment-ktx'    : "androidx.fragment:fragment-ktx:1.2.5",
+                    'lifecycle-ktx'   : "androidx.lifecycle:lifecycle-runtime-ktx:2.2.0",
+            ],
+            'koin'           : [
+                    'android'  : "org.koin:koin-android:$vers.koin_version",
+                    'scope'    : "org.koin:koin-androidx-scope:$vers.koin_version",
+                    'viewmodel': "org.koin:koin-androidx-viewmodel:$vers.koin_version",
+            ],
+            'coroutines'     : [
+                    'android': "org.jetbrains.kotlinx:kotlinx-coroutines-android:$vers.coroutines",
+                    'core'   : "org.jetbrains.kotlinx:kotlinx-coroutines-core:$vers.coroutines",
+            ],
+            'google'         : [
+                    'material': 'com.google.android.material:material:1.2.1'
+            ],
+            'network'        : [
+                    'retrofit': "com.squareup.retrofit2:retrofit:$vers.retrofit",
+                    'okhttp'  : "com.squareup.okhttp3:okhttp:$vers.okhttp_version",
+                    'gson'    : "com.squareup.retrofit2:converter-gson:$vers.retrofit",
+                    'logging' : "com.squareup.okhttp3:logging-interceptor:$vers.okhttp_version"
+            ],
+            'testImpl'       : [
+                    'junit': 'junit:junit:4.+',
+            ],
+            'androidTestImpl': [
+                    'junit': 'androidx.test.ext:junit:1.1.2',
+                    'core' : 'androidx.test.espresso:espresso-core:3.3.0'
+            ]
+    ]
+
+
     repositories {
         google()
         jcenter()
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.0"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$vers.kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
