--- a/network/build.gradle
+++ b/network/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
     id 'kotlin-android'
 }
 
@@ -8,16 +8,21 @@ android {
     buildToolsVersion "30.0.2"
 
     defaultConfig {
-        applicationId "kg.nurtelecom.ofd"
         minSdkVersion 22
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
+
+        all {
+            buildConfigField "String", "URL", "\"https://staging-ofd.o.kg/pkkm/api\""
+        }
+
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
@@ -35,15 +40,12 @@ android {
 dependencies {
 
     implementation project(path: ':core')
-    implementation project(path: ':network')
     implementation project(path: ':data')
     implementation project(path: ':storage')
-    implementation project(path: ':ui')
 
-    implementation libs.kotlin
-    implementation libs.androidx.values()
-    implementation libs.google.values()
     implementation libs.koin.values()
+    implementation libs.network.values()
+    implementation libs.coroutines.values()
 
     testImplementation libs.testImpl.values()
     androidTestImplementation libs.androidTestImpl.values()
