--- a/build.gradle
+++ b/build.gradle
@@ -62,7 +62,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.0"
+        classpath 'com.android.tools.build:gradle:4.1.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$vers.kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
