--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,11 +36,11 @@ android {
 }
 
 dependencies {
-
+    implementation project(path: ':data')
     implementation project(path: ':core')
     implementation project(path: ':network')
-    implementation project(path: ':data')
     implementation project(path: ':storage')
+    implementation project(path: ':sell')
     implementation project(path: ':ui')
     implementation project(path: ':auth')
 
