--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ buildscript {
                     'viewmodel-ktx'   : "androidx.lifecycle:lifecycle-viewmodel-ktx:$vers.lifecycle_version",
                     'livedata-ktx'    : "androidx.lifecycle:lifecycle-livedata-ktx:$vers.lifecycle_version",
                     'core-ktx'        : "androidx.core:core-ktx:1.3.2",
+                    'fragment'        : "androidx.fragment:fragment:1.2.5",
                     'fragment-ktx'    : "androidx.fragment:fragment-ktx:1.2.5",
                     'lifecycle-ktx'   : "androidx.lifecycle:lifecycle-runtime-ktx:2.2.0",
                     'room'            : "androidx.room:room-runtime:$vers.room_version",
