--- a/user/build.gradle
+++ b/user/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.library'
     id 'kotlin-android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -49,6 +50,7 @@ dependencies {
     implementation libs.google.values()
     implementation libs.koin.values()
     implementation libs.room.values()
+    kapt libs.roomKapt.values()
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
