Remove setSubTitleVisibility fun rename function's attributes remove mxl subTitleVisibility attribute

--- a/ui/build.gradle
+++ b/ui/build.gradle
@@ -37,6 +37,8 @@ android {
 
 dependencies {
 
+    implementation project(path: ':core')
+
     implementation libs.kotlin
     implementation libs.androidx.values()
     implementation libs.google.values()
