--- a/ui/build.gradle
+++ b/ui/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
     implementation project(path: ':core')
+    implementation project(path: ':data')
 
     testImplementation libs.testImpl.values()
     androidTestImplementation libs.androidTestImpl.values()
