--- a/user/src/main/AndroidManifest.xml
+++ b/user/src/main/AndroidManifest.xml
@@ -2,4 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="kg.nurtelecom.user">
 
+    <application>
+        <activity android:name="kg.nurtelecom.changepassword.ui.ChangePasswordActivity"></activity>
+    </application>
+
 </manifest>
