--- a/sell/build.gradle
+++ b/sell/build.gradle
@@ -47,7 +47,10 @@ dependencies {
     implementation libs.google.values()
     implementation libs.network.values()
     implementation libs.koin.values()
-    implementation libs.room.values()
+
+    implementation project(path: ':core')
+    implementation project(path: ':ui')
+    implementation project(path: ':data')
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
