--- a/sell/src/main/AndroidManifest.xml
+++ b/sell/src/main/AndroidManifest.xml
@@ -3,9 +3,8 @@
     package="kg.nurtelecom.sell">
 
     <application>
-        <activity android:name=".ui.activity.SellMainActivity">
-
-        </activity>
+        <activity android:name=".ui.activity.HistoryActivity"></activity>
+        <activity android:name=".ui.activity.SellMainActivity"></activity>
     </application>
 
 </manifest>
