--- a/sell/src/main/AndroidManifest.xml
+++ b/sell/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <application>
         <activity android:name=".ui.activity.HistoryActivity"></activity>
         <activity android:name=".ui.activity.SellMainActivity"></activity>
+        <activity android:name=".ui.activity.OtherOperationsActivity"></activity>
     </application>
 
 </manifest>
