--- a/sell/build.gradle
+++ b/sell/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.library'
     id 'kotlin-android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -47,7 +48,8 @@ dependencies {
     implementation libs.google.values()
     implementation libs.network.values()
     implementation libs.koin.values()
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+
+    kapt libs.roomKapt.values()
 
     testImplementation libs.testImpl.values()
     androidTestImplementation libs.androidTestImpl.values()
