--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,8 @@ buildscript {
     ext.vers = [
             "kotlin_version"   : "1.4.10",
             "lifecycle_version": "2.2.0",
+            "activity_version" : "1.2.0",
+            "fragment_version" : "1.3.0",
             "coroutines"       : "1.3.9",
             "koin_version"     : "2.2.0",
             "okhttp_version"   : "4.9.0",
@@ -19,8 +21,10 @@ buildscript {
                     'viewmodel-ktx'   : "androidx.lifecycle:lifecycle-viewmodel-ktx:$vers.lifecycle_version",
                     'livedata-ktx'    : "androidx.lifecycle:lifecycle-livedata-ktx:$vers.lifecycle_version",
                     'core-ktx'        : "androidx.core:core-ktx:1.3.2",
-                    'fragment'        : "androidx.fragment:fragment:1.2.5",
-                    'fragment-ktx'    : "androidx.fragment:fragment-ktx:1.2.5",
+                    'activity'        : "androidx.activity:activity:$vers.activity_version",
+                    'activity-ktx'    : "androidx.activity:activity-ktx:$vers.activity_version",
+                    'fragment'        : "androidx.fragment:fragment:$vers.fragment_version",
+                    'fragment-ktx'    : "androidx.fragment:fragment-ktx:$vers.fragment_version",
                     'lifecycle-ktx'   : "androidx.lifecycle:lifecycle-runtime-ktx:2.2.0",
                     'room'            : "androidx.room:room-runtime:$vers.room_version",
                     'room-ktx'        : "androidx.room:room-ktx:$vers.room_version",
